# Medical-Record-Organizer

./: .env.example  .gitignore  AGENTS.md  PRD.md  README.en.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.ru.md  SKILL.md  llm_process_keys.md  mineru_api_batch.md  mineru_api_guide.md  pyproject.toml  requirements-ocr.txt  requirements.txt  step_asr_guide.md  xyb
doc/: AGENTS.md  data-contract.md  fix-plan.md  mdt-analysis-plan.md  mineru_batch_api.md  template-context.md  workflow.md
docs/: patient-profile-schema-v1.md  prd-v2-mapreduce-architecture.md
references/: case-report-template.md  classification-rules.md  html-report-assets.md  html-report-design.md  html-report-prompt.md  html-report-template.html  report-agent.md  report-format-prompts.md
scripts/: asr_stepfun.py  classify.py  critical_values.py  desensitize.py  ingest.py  llm_client.py  manifest.py  map_extract.py  mdt_analysis.py  memory.py  ocr_runner.py  ocr_single.py  parse_genetics.py  pipeline.py.bak  preflight.py  reduce_merge.py  render_html.py  render_html_v2.py  render_md.py  route_ocr.py  run_v2_test_20.py  security.py  shuffle_group.py  test_render_from_case_data.py
temp_test_inputs/: 01_病情概述_页面_08.md  IMG_0112.md  IMG_0132.md  IMG_2601.md  IMG_2916.md  IMG_2918.md  IMG_5536.md  IMG_5661.md
temp_test_inputs_v2/: IMG_0108.md  IMG_0109.md  IMG_0115.md  IMG_0119.md  IMG_0126.md  IMG_0269.md  IMG_1112.md  IMG_1114.md  IMG_2924.md  IMG_3109.md  IMG_3955.md  IMG_5539.md  IMG_5660.md
temp_v2_output/: case_report.md  mappings.json  profile.json
tests/: conftest.py  (+14 more)
(+69 files in other folders)
